syntax = "proto3";

package api.provider;

option go_package="github.com/synerex/synerex_alpha/api/simulation/provider";
import "simulation/agent/agent.proto";
import "simulation/area/area.proto";

message RegistProviderRequest {
    Provider provider = 1;
}

message RegistProviderResponse {
}

message KillProviderRequest {
    Provider provider = 1;
}

message KillProviderResponse {
}

message DivideProviderRequest {
    Provider provider = 1;
}

message DivideProviderResponse {
}


message UpdateProvidersRequest {
	repeated Provider providers = 1;
}

message UpdateProvidersResponse {
}

message SendProviderStatusRequest {
	Provider provider = 1;
}

message SendProviderStatusResponse {
}


message Provider {
	uint64 id = 1;
	string name = 2;
    ProviderType type = 3;
	ProviderStatus status = 4;
	oneof data {
		ScenarioStatus scenario_status = 5;
		AgentStatus agent_status = 6;
		VisualizationStatus visualization_status = 7;
		ClockStatus clock_status = 8;
	}
}

message ProviderStatus {
	uint64 total_time = 1;
	uint64 com_time = 2;
	uint64 lc_time = 3;
}


enum ProviderType {
    NODE_ID = 0;
    SYNEREX = 1;
	MONITOR = 2;
    SCENARIO = 3;
	AGENT = 4;
	VISUALIZATION = 5;
	CLOCK = 6;
}

message ScenarioStatus {
}

message AgentStatus {
	area.Area area = 1;
    agent.AgentType agent_type = 2;
	uint64 agent_num = 3;
}

message VisualizationStatus {
}

message ClockStatus {
}






